Typedjs content jump issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1325,7 +1325,7 @@ a:visited {
 
 .banner-one__content h3 {
 	margin: 0;
-	font-size: 70px;
+	font-size: 50px;
 	color: #fff;
 	letter-spacing: -.02em;
 	font-weight: 800;
